style fixes - graph overlaps with toolbar

--- a/src/pages/Stream/styles/EventTimeLineGraph.module.css
+++ b/src/pages/Stream/styles/EventTimeLineGraph.module.css
@@ -2,9 +2,8 @@
     width: 100%;
     height: 100%;
     padding: 0.5rem;
-    padding-top: 0;
     padding-bottom: 1rem;
-    margin-left: -3.4rem;
+    margin-left: -1.4rem;
 }
 
 .noDataContainer {
